<resources>
  <string name="app_name">Insta Downloader</string>
  <string name="title_home">Home</string>
  <string name="title_download">Download</string>
  <string name="paste_link">Paste Link</string>
  <string name="download">Download</string>
  <string name="paste_an_insta_link">Paste an Instagram URL here</string>
  <string name="post_empty">List is empty</string>
  <string name="view_on_insta">View on Instagram</string>
  <string name="repost_on_insta">Repost</string>
  <string name="share">Share</string>
  <string name="share_link">Share Link</string>
  <string name="share_media">Share Media</string>
  <string name="delete">Delete</string>
  <string name="no_internet_connection">No internet connection.</string>
  <string name="copy_link">Copy Link</string>
  <string name="copied_link_to_clipboard">Copied link to clipboard.</string>
  <string name="copied_caption_to_clipboard">Copied caption to clipboard.</string>
  <string name="recently_visited">Recently Visited</string>
  <string name="latest_download">Latest Download</string>
  <string name="copy_caption">Copy Caption</string>
  <string name="caption_not_found">Caption not found.</string>
  <string name="post_download_successfully">Post download successfully.</string>
  <string name="post_download_failed">Post download failed.</string>
  <string name="insta_link_not_found">Instagram link not found.</string>
  <string name="this_is_not_an_insta_link">This is not an Instagram link.</string>
  <string name="file_not_found">File not found.</string>
  <string name="cannot_open_insta">Can\'t open Instagram.</string>
  <string name="insta_not_install">Instagram have not been installed.</string>
  <string name="cannot_repost">Can\'t repost media.</string>
  <string name="back">Back</string>
  <string name="loading">Loading…</string>

  <string name="facebook_app_id">643404319531246</string>
  <string name="fb_login_protocol_scheme">fb643404319531246</string>

  <!-- AdMob Live IDs -->
  <!--  <string name="admob_app_id">ca-app-pub-4399159479903837~5762868851</string>-->
  <!--  <string name="banner_home_footer">ca-app-pub-4399159479903837/7470169366</string>-->
  <!--  <string name="interstitial_full_screen">ca-app-pub-4399159479903837/6619928600</string>-->
  <!--  <string name="rewarded_video">ca-app-pub-4399159479903837/4718569868</string>-->

  <!-- Facebook Live id -->
  <!--  <string name="facebook_app_id">ca-app-pub-7814549536543810~2265774028</string>-->
  <!--  <string name="facebook_banner">720819818334614_720821941667735</string>-->
  <!--  <string name="facebook_rectangle">720819818334614_727176271032302</string>-->
  <!--  <string name="facebook_interstitial">720819818334614_720828088333787</string>-->

  <!--Facebook Test Ads id &ndash;&gt;-->
  <string name="facebook_banner">YOUR_PLACEMENT_ID</string>
  <string name="facebook_rectangle">YOUR_PLACEMENT_ID</string>
  <string name="facebook_interstitial">YOUR_PLACEMENT_ID</string>

  <!-- AdMob Test Ads id -->
  <string name="banner_home_footer" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
  <string name="interstitial_full_screen" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
  <string name="rewarded_video" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
  <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
  <string name="please_click_back_again">Please click BACK again to exit</string>
  <string name="open_insta">Open Instagram</string>
  <string name="settings">Settings</string>
  <string name="share_app">Share App</string>
  <string name="family_app">Family App</string>
  <string name="remove_ads">Remove Ads</string>
  <string name="clear_all">Clear All</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
