<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.postdetails.PostDetailsActivity">

    <com.github.chrisbanes.photoview.PhotoView
      android:id="@+id/photo_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="fitCenter" />

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="@android:color/transparent">

      <ImageButton
        android:id="@+id/back"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_back_white" />

      <TextView
        android:id="@+id/text_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:layout_marginEnd="16dp"
        android:text="1/1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:gravity="center"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/img_view_insta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/view_on_insta"
        app:srcCompat="@drawable/ic_view_insta_white" />

      <ImageView
        android:id="@+id/img_repost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/repost_on_insta"
        app:srcCompat="@drawable/ic_repost_white" />

      <ImageView
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/share"
        app:srcCompat="@drawable/ic_share_white" />

      <ImageView
        android:id="@+id/img_copy_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/copy_link"
        app:srcCompat="@drawable/ic_link_white" />

      <ImageView
        android:id="@+id/img_copy_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/copy_caption"
        app:srcCompat="@drawable/ic_caption_white" />

      <ImageView
        android:id="@+id/img_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:tooltipText="@string/delete"
        app:srcCompat="@drawable/ic_delete_white" />

    </LinearLayout>

  </FrameLayout>

</layout>