<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="hasUsers"
      type="boolean" />

    <variable
      name="hasLatest"
      type="boolean" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/bg"
      android:padding="16dp">

      <EditText
        android:id="@+id/edt_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt"
        android:hint="@string/paste_an_insta_link"
        android:padding="12dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <Button
        android:id="@+id/btn_paste_link"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_default_outline"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/paste_link"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btn_download"
        app:layout_constraintTop_toBottomOf="@+id/edt_link" />

      <Button
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_default"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_link" />

      <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_download" />

      <TextView
        android:id="@+id/label_latest_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/latest_download"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:isGone="@{!hasLatest}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_media"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:isGone="@{!hasLatest}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_latest_download">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <FrameLayout
            android:id="@+id/layout_media"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
              android:id="@+id/img_media"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:scaleType="fitXY" />

            <ImageView
              android:id="@+id/img_multi"
              android:layout_width="16dp"
              android:layout_height="16dp"
              android:layout_gravity="end"
              android:layout_margin="4dp"
              android:visibility="gone"
              app:srcCompat="@drawable/ic_photo_library_black_24dp" />

            <ImageView
              android:id="@+id/img_video"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:layout_gravity="center"
              android:visibility="gone"
              app:srcCompat="@drawable/ic_play_circle_outline_white_32dp" />

          </FrameLayout>

          <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintStart_toEndOf="@+id/layout_media"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />

          <TextView
            android:id="@+id/text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="parent" />

          <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_username"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_vert" />

          <TextView
            android:id="@+id/text_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

      <TextView
        android:id="@+id/label_recently_visited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:text="@string/recently_visited"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:isGone="@{!hasUsers}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_media" />

      <androidx.cardview.widget.CardView
        android:id="@+id/card_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:isGone="@{!hasUsers}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_recently_visited">

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/user_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
          app:spanCount="@integer/grid_columns"
          tools:listitem="@layout/list_item_user" />

      </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>
</layout>